[tool.poetry]
name = "best-parser-bot"
version = "0.9.1"
description = "A pet-ptoject"
authors = ["Walkinslo"]
readme = "README.md"
packages = [{include = "best_parser_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-telegram-bot = "^20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
