[tool.poetry]
name = "bot"
version = "0.9.1"
description = "A simple bot that sends photos"
authors = ["Walkinslo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-telegram-bot = "^20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
